// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RevealPrivateCredential renders reveal SRP correctly when the credential is directly passed 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
      ],
      {
        "paddingBottom": 0,
      },
    ]
  }
  testID="reveal-private-credential-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "flex": 1,
              "flexDirection": "column",
              "height": "100%",
            },
          ]
        }
      >
        <RCTScrollView
          automaticallyAdjustContentInsets={false}
          contentContainerStyle={
            {
              "flex": 1,
            }
          }
          contentInset={
            {
              "bottom": 0,
            }
          }
          enableAutomaticScroll={true}
          enableOnAndroid={false}
          enableResetScrollToCoords={true}
          extraHeight={75}
          extraScrollHeight={0}
          getScrollResponder={[Function]}
          handleOnScroll={[Function]}
          keyboardDismissMode="interactive"
          keyboardOpeningTime={250}
          keyboardShouldPersistTaps="never"
          keyboardSpace={0}
          onScroll={[Function]}
          resetKeyboardSpace={[Function]}
          resetScrollToCoords={
            {
              "x": 0,
              "y": 0,
            }
          }
          scrollEventThrottle={1}
          scrollForExtraHeightOnAndroid={[Function]}
          scrollIntoView={[Function]}
          scrollToEnd={[Function]}
          scrollToFocusedInput={[Function]}
          scrollToPosition={[Function]}
          showsVerticalScrollIndicator={true}
          style={
            [
              {
                "flex": 1,
              },
              undefined,
              {
                "flex": 1,
                "flexDirection": "column",
                "height": "100%",
              },
            ]
          }
          testID="reveal-credential-scroll"
          update={[Function]}
          viewIsInsideTabBar={false}
        >
          <View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "padding": 20,
                    },
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontWeight": "400",
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  The
                   
                  <Text
                    accessibilityRole="text"
                    onPress={[Function]}
                    style={
                      {
                        "color": "#4459ff",
                        "fontFamily": "CentraNo1-Book",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    Secret Recovery Phrase (SRP)
                  </Text>
                   
                  gives
                   
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Bold",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    full access to your wallet, funds and accounts.


                  </Text>
                  MetaMask is a
                   
                  <Text
                    accessibilityRole="text"
                    onPress={[Function]}
                    style={
                      {
                        "color": "#4459ff",
                        "fontFamily": "CentraNo1-Book",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    non-custodial wallet.
                     
                  </Text>
                  That means,
                   
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Bold",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    you are the owner of your SRP.
                  </Text>
                </Text>
              </View>
              <View
                style={
                  {
                    "paddingHorizontal": 16,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ca35421a",
                      "borderColor": "#ca3542",
                      "borderLeftWidth": 4,
                      "borderRadius": 4,
                      "flexDirection": "row",
                      "padding": 12,
                      "paddingHorizontal": 16,
                      "paddingLeft": 8,
                    }
                  }
                  testID="banneralert"
                  variant="Alert"
                >
                  <View
                    style={
                      {
                        "marginRight": 8,
                      }
                    }
                  >
                    <SvgMock
                      color="#ca3542"
                      fill="currentColor"
                      height={24}
                      name="Danger"
                      style={
                        {
                          "height": 24,
                          "width": 24,
                        }
                      }
                      width={24}
                    />
                  </View>
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "CentraNo1-Book",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      Make sure nobody is looking at your screen. 
                      <Text
                        accessibilityRole="text"
                        style={
                          {
                            "color": "#121314",
                            "fontFamily": "CentraNo1-Bold",
                            "fontSize": 16,
                            "fontWeight": "700",
                            "letterSpacing": 0,
                            "lineHeight": 24,
                          }
                        }
                      >
                        MetaMask Support will never request this.
                      </Text>
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  [
                    {
                      "padding": 20,
                    },
                    {
                      "flex": 1,
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 16,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "marginBottom": 4,
                    }
                  }
                >
                  Enter password to continue
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderColor": "#b7bbc8",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "color": "#121314",
                      "flexDirection": "row",
                      "height": 48,
                      "opacity": 1,
                      "padding": 10,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="textfield"
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      autoFocus={false}
                      editable={true}
                      keyboardAppearance="light"
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onSubmitEditing={[Function]}
                      placeholder="Make sure nobody is looking"
                      placeholderTextColor="#9ca1af"
                      secureTextEntry={true}
                      style={
                        {
                          "backgroundColor": "#ffffff",
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "#121314",
                          "fontFamily": "CentraNo1-Book",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "height": 24,
                          "letterSpacing": 0,
                          "opacity": 1,
                          "paddingVertical": 0,
                        }
                      }
                      testID="private-credential-password-text-input"
                    />
                  </View>
                </View>
                <Text
                  style={
                    {
                      "color": "#ca3542",
                      "fontFamily": "CentraNo1-Book",
                      "fontWeight": "400",
                      "marginTop": 10,
                    }
                  }
                  testID="password-warning"
                />
              </View>
              <View
                style={
                  [
                    {
                      "columnGap": 8,
                      "flexDirection": "row",
                      "marginBottom": 16,
                      "paddingHorizontal": 16,
                      "width": "100%",
                    },
                    {
                      "marginTop": "auto",
                    },
                  ]
                }
              >
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "backgroundColor": "transparent",
                      "borderColor": "#4459ff",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "flex": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "justifyContent": "center",
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="reveal-private-credential-cancel-button"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#4459ff",
                        "fontFamily": "CentraNo1-Medium",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Cancel
                  </Text>
                </TouchableOpacity>
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={true}
                  loading={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "backgroundColor": "#4459ff",
                      "borderRadius": 12,
                      "flex": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "justifyContent": "center",
                      "opacity": 0.5,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="reveal-private-credential-next-button"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#ffffff",
                        "fontFamily": "CentraNo1-Medium",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Next
                  </Text>
                </TouchableOpacity>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View />
    </View>
  </RCTScrollView>
</View>
`;

exports[`RevealPrivateCredential renders reveal SRP correctly when the credential is passed via the route object 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
      ],
      {
        "paddingBottom": 0,
      },
    ]
  }
  testID="reveal-private-credential-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "flex": 1,
              "flexDirection": "column",
              "height": "100%",
            },
          ]
        }
      >
        <RCTScrollView
          automaticallyAdjustContentInsets={false}
          contentContainerStyle={
            {
              "flex": 1,
            }
          }
          contentInset={
            {
              "bottom": 0,
            }
          }
          enableAutomaticScroll={true}
          enableOnAndroid={false}
          enableResetScrollToCoords={true}
          extraHeight={75}
          extraScrollHeight={0}
          getScrollResponder={[Function]}
          handleOnScroll={[Function]}
          keyboardDismissMode="interactive"
          keyboardOpeningTime={250}
          keyboardShouldPersistTaps="never"
          keyboardSpace={0}
          onScroll={[Function]}
          resetKeyboardSpace={[Function]}
          resetScrollToCoords={
            {
              "x": 0,
              "y": 0,
            }
          }
          scrollEventThrottle={1}
          scrollForExtraHeightOnAndroid={[Function]}
          scrollIntoView={[Function]}
          scrollToEnd={[Function]}
          scrollToFocusedInput={[Function]}
          scrollToPosition={[Function]}
          showsVerticalScrollIndicator={true}
          style={
            [
              {
                "flex": 1,
              },
              undefined,
              {
                "flex": 1,
                "flexDirection": "column",
                "height": "100%",
              },
            ]
          }
          testID="reveal-credential-scroll"
          update={[Function]}
          viewIsInsideTabBar={false}
        >
          <View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "padding": 20,
                    },
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontWeight": "400",
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  The
                   
                  <Text
                    accessibilityRole="text"
                    onPress={[Function]}
                    style={
                      {
                        "color": "#4459ff",
                        "fontFamily": "CentraNo1-Book",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    Secret Recovery Phrase (SRP)
                  </Text>
                   
                  gives
                   
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Bold",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    full access to your wallet, funds and accounts.


                  </Text>
                  MetaMask is a
                   
                  <Text
                    accessibilityRole="text"
                    onPress={[Function]}
                    style={
                      {
                        "color": "#4459ff",
                        "fontFamily": "CentraNo1-Book",
                        "fontSize": 14,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    non-custodial wallet.
                     
                  </Text>
                  That means,
                   
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "CentraNo1-Bold",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    you are the owner of your SRP.
                  </Text>
                </Text>
              </View>
              <View
                style={
                  {
                    "paddingHorizontal": 16,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ca35421a",
                      "borderColor": "#ca3542",
                      "borderLeftWidth": 4,
                      "borderRadius": 4,
                      "flexDirection": "row",
                      "padding": 12,
                      "paddingHorizontal": 16,
                      "paddingLeft": 8,
                    }
                  }
                  testID="banneralert"
                  variant="Alert"
                >
                  <View
                    style={
                      {
                        "marginRight": 8,
                      }
                    }
                  >
                    <SvgMock
                      color="#ca3542"
                      fill="currentColor"
                      height={24}
                      name="Danger"
                      style={
                        {
                          "height": 24,
                          "width": 24,
                        }
                      }
                      width={24}
                    />
                  </View>
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "CentraNo1-Book",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      Make sure nobody is looking at your screen. 
                      <Text
                        accessibilityRole="text"
                        style={
                          {
                            "color": "#121314",
                            "fontFamily": "CentraNo1-Bold",
                            "fontSize": 16,
                            "fontWeight": "700",
                            "letterSpacing": 0,
                            "lineHeight": 24,
                          }
                        }
                      >
                        MetaMask Support will never request this.
                      </Text>
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  [
                    {
                      "padding": 20,
                    },
                    {
                      "flex": 1,
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 16,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "marginBottom": 4,
                    }
                  }
                >
                  Enter password to continue
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderColor": "#b7bbc8",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "color": "#121314",
                      "flexDirection": "row",
                      "height": 48,
                      "opacity": 1,
                      "padding": 10,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="textfield"
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      autoFocus={false}
                      editable={true}
                      keyboardAppearance="light"
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onSubmitEditing={[Function]}
                      placeholder="Make sure nobody is looking"
                      placeholderTextColor="#9ca1af"
                      secureTextEntry={true}
                      style={
                        {
                          "backgroundColor": "#ffffff",
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "#121314",
                          "fontFamily": "CentraNo1-Book",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "height": 24,
                          "letterSpacing": 0,
                          "opacity": 1,
                          "paddingVertical": 0,
                        }
                      }
                      testID="private-credential-password-text-input"
                    />
                  </View>
                </View>
                <Text
                  style={
                    {
                      "color": "#ca3542",
                      "fontFamily": "CentraNo1-Book",
                      "fontWeight": "400",
                      "marginTop": 10,
                    }
                  }
                  testID="password-warning"
                />
              </View>
              <View
                style={
                  [
                    {
                      "columnGap": 8,
                      "flexDirection": "row",
                      "marginBottom": 16,
                      "paddingHorizontal": 16,
                      "width": "100%",
                    },
                    {
                      "marginTop": "auto",
                    },
                  ]
                }
              >
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "backgroundColor": "transparent",
                      "borderColor": "#4459ff",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "flex": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "justifyContent": "center",
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="reveal-private-credential-cancel-button"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#4459ff",
                        "fontFamily": "CentraNo1-Medium",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Cancel
                  </Text>
                </TouchableOpacity>
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={true}
                  loading={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "backgroundColor": "#4459ff",
                      "borderRadius": 12,
                      "flex": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "justifyContent": "center",
                      "opacity": 0.5,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="reveal-private-credential-next-button"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#ffffff",
                        "fontFamily": "CentraNo1-Medium",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Next
                  </Text>
                </TouchableOpacity>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View />
    </View>
  </RCTScrollView>
</View>
`;

exports[`RevealPrivateCredential renders reveal private key correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
      ],
      {
        "paddingBottom": 0,
      },
    ]
  }
  testID="reveal-private-credential-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "flex": 1,
              "flexDirection": "column",
              "height": "100%",
            },
          ]
        }
      >
        <RCTScrollView
          automaticallyAdjustContentInsets={false}
          contentContainerStyle={
            {
              "flex": 1,
            }
          }
          contentInset={
            {
              "bottom": 0,
            }
          }
          enableAutomaticScroll={true}
          enableOnAndroid={false}
          enableResetScrollToCoords={true}
          extraHeight={75}
          extraScrollHeight={0}
          getScrollResponder={[Function]}
          handleOnScroll={[Function]}
          keyboardDismissMode="interactive"
          keyboardOpeningTime={250}
          keyboardShouldPersistTaps="never"
          keyboardSpace={0}
          onScroll={[Function]}
          resetKeyboardSpace={[Function]}
          resetScrollToCoords={
            {
              "x": 0,
              "y": 0,
            }
          }
          scrollEventThrottle={1}
          scrollForExtraHeightOnAndroid={[Function]}
          scrollIntoView={[Function]}
          scrollToEnd={[Function]}
          scrollToFocusedInput={[Function]}
          scrollToPosition={[Function]}
          showsVerticalScrollIndicator={true}
          style={
            [
              {
                "flex": 1,
              },
              undefined,
              {
                "flex": 1,
                "flexDirection": "column",
                "height": "100%",
              },
            ]
          }
          testID="reveal-credential-scroll"
          update={[Function]}
          viewIsInsideTabBar={false}
        >
          <View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "padding": 20,
                    },
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontWeight": "400",
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Save it somewhere safe and secret.
                </Text>
              </View>
              <View
                style={
                  {
                    "paddingHorizontal": 16,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ca35421a",
                      "borderColor": "#ca3542",
                      "borderLeftWidth": 4,
                      "borderRadius": 4,
                      "flexDirection": "row",
                      "padding": 12,
                      "paddingHorizontal": 16,
                      "paddingLeft": 8,
                    }
                  }
                  testID="banneralert"
                  variant="Alert"
                >
                  <View
                    style={
                      {
                        "marginRight": 8,
                      }
                    }
                  >
                    <SvgMock
                      color="#ca3542"
                      fill="currentColor"
                      height={24}
                      name="Danger"
                      style={
                        {
                          "height": 24,
                          "width": 24,
                        }
                      }
                      width={24}
                    />
                  </View>
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "CentraNo1-Book",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      Never disclose this key. Anyone with your private key can fully control your account, including transferring away any of your funds.
                       
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  [
                    {
                      "padding": 20,
                    },
                    {
                      "flex": 1,
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 16,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "marginBottom": 4,
                    }
                  }
                >
                  Enter password to continue
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderColor": "#b7bbc8",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "color": "#121314",
                      "flexDirection": "row",
                      "height": 48,
                      "opacity": 1,
                      "padding": 10,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="textfield"
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      autoFocus={false}
                      editable={true}
                      keyboardAppearance="light"
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onSubmitEditing={[Function]}
                      placeholder="Make sure nobody is looking"
                      placeholderTextColor="#9ca1af"
                      secureTextEntry={true}
                      style={
                        {
                          "backgroundColor": "#ffffff",
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "#121314",
                          "fontFamily": "CentraNo1-Book",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "height": 24,
                          "letterSpacing": 0,
                          "opacity": 1,
                          "paddingVertical": 0,
                        }
                      }
                      testID="private-credential-password-text-input"
                    />
                  </View>
                </View>
                <Text
                  style={
                    {
                      "color": "#ca3542",
                      "fontFamily": "CentraNo1-Book",
                      "fontWeight": "400",
                      "marginTop": 10,
                    }
                  }
                  testID="password-warning"
                />
              </View>
              <View
                style={
                  [
                    {
                      "columnGap": 8,
                      "flexDirection": "row",
                      "marginBottom": 16,
                      "paddingHorizontal": 16,
                      "width": "100%",
                    },
                    {
                      "marginTop": "auto",
                    },
                  ]
                }
              >
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "backgroundColor": "transparent",
                      "borderColor": "#4459ff",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "flex": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "justifyContent": "center",
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="reveal-private-credential-cancel-button"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#4459ff",
                        "fontFamily": "CentraNo1-Medium",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Cancel
                  </Text>
                </TouchableOpacity>
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={true}
                  loading={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "backgroundColor": "#4459ff",
                      "borderRadius": 12,
                      "flex": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "justifyContent": "center",
                      "opacity": 0.5,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="reveal-private-credential-next-button"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#ffffff",
                        "fontFamily": "CentraNo1-Medium",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Next
                  </Text>
                </TouchableOpacity>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View />
    </View>
  </RCTScrollView>
</View>
`;

exports[`RevealPrivateCredential renders with a custom selectedAddress 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      [
        {
          "backgroundColor": "#ffffff",
          "flex": 1,
        },
      ],
      {
        "paddingBottom": 0,
      },
    ]
  }
  testID="reveal-private-credential-screen"
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "flex": 1,
              "flexDirection": "column",
              "height": "100%",
            },
          ]
        }
      >
        <RCTScrollView
          automaticallyAdjustContentInsets={false}
          contentContainerStyle={
            {
              "flex": 1,
            }
          }
          contentInset={
            {
              "bottom": 0,
            }
          }
          enableAutomaticScroll={true}
          enableOnAndroid={false}
          enableResetScrollToCoords={true}
          extraHeight={75}
          extraScrollHeight={0}
          getScrollResponder={[Function]}
          handleOnScroll={[Function]}
          keyboardDismissMode="interactive"
          keyboardOpeningTime={250}
          keyboardShouldPersistTaps="never"
          keyboardSpace={0}
          onScroll={[Function]}
          resetKeyboardSpace={[Function]}
          resetScrollToCoords={
            {
              "x": 0,
              "y": 0,
            }
          }
          scrollEventThrottle={1}
          scrollForExtraHeightOnAndroid={[Function]}
          scrollIntoView={[Function]}
          scrollToEnd={[Function]}
          scrollToFocusedInput={[Function]}
          scrollToPosition={[Function]}
          showsVerticalScrollIndicator={true}
          style={
            [
              {
                "flex": 1,
              },
              undefined,
              {
                "flex": 1,
                "flexDirection": "column",
                "height": "100%",
              },
            ]
          }
          testID="reveal-credential-scroll"
          update={[Function]}
          viewIsInsideTabBar={false}
        >
          <View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "padding": 20,
                    },
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontWeight": "400",
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  Save it somewhere safe and secret.
                </Text>
              </View>
              <View
                style={
                  {
                    "paddingHorizontal": 16,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ca35421a",
                      "borderColor": "#ca3542",
                      "borderLeftWidth": 4,
                      "borderRadius": 4,
                      "flexDirection": "row",
                      "padding": 12,
                      "paddingHorizontal": 16,
                      "paddingLeft": 8,
                    }
                  }
                  testID="banneralert"
                  variant="Alert"
                >
                  <View
                    style={
                      {
                        "marginRight": 8,
                      }
                    }
                  >
                    <SvgMock
                      color="#ca3542"
                      fill="currentColor"
                      height={24}
                      name="Danger"
                      style={
                        {
                          "height": 24,
                          "width": 24,
                        }
                      }
                      width={24}
                    />
                  </View>
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "CentraNo1-Book",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      Never disclose this key. Anyone with your private key can fully control your account, including transferring away any of your funds.
                       
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  [
                    {
                      "padding": 20,
                    },
                    {
                      "flex": 1,
                    },
                  ]
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Bold",
                      "fontSize": 16,
                      "fontWeight": "700",
                      "letterSpacing": 0,
                      "lineHeight": 24,
                      "marginBottom": 4,
                    }
                  }
                >
                  Enter password to continue
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderColor": "#b7bbc8",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "color": "#121314",
                      "flexDirection": "row",
                      "height": 48,
                      "opacity": 1,
                      "padding": 10,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="textfield"
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TextInput
                      autoCapitalize="none"
                      autoFocus={false}
                      editable={true}
                      keyboardAppearance="light"
                      onBlur={[Function]}
                      onChangeText={[Function]}
                      onFocus={[Function]}
                      onSubmitEditing={[Function]}
                      placeholder="Make sure nobody is looking"
                      placeholderTextColor="#9ca1af"
                      secureTextEntry={true}
                      style={
                        {
                          "backgroundColor": "#ffffff",
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "#121314",
                          "fontFamily": "CentraNo1-Book",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "height": 24,
                          "letterSpacing": 0,
                          "opacity": 1,
                          "paddingVertical": 0,
                        }
                      }
                      testID="private-credential-password-text-input"
                    />
                  </View>
                </View>
                <Text
                  style={
                    {
                      "color": "#ca3542",
                      "fontFamily": "CentraNo1-Book",
                      "fontWeight": "400",
                      "marginTop": 10,
                    }
                  }
                  testID="password-warning"
                />
              </View>
              <View
                style={
                  [
                    {
                      "columnGap": 8,
                      "flexDirection": "row",
                      "marginBottom": 16,
                      "paddingHorizontal": 16,
                      "width": "100%",
                    },
                    {
                      "marginTop": "auto",
                    },
                  ]
                }
              >
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "backgroundColor": "transparent",
                      "borderColor": "#4459ff",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "flex": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "justifyContent": "center",
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="reveal-private-credential-cancel-button"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#4459ff",
                        "fontFamily": "CentraNo1-Medium",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Cancel
                  </Text>
                </TouchableOpacity>
                <TouchableOpacity
                  accessibilityRole="button"
                  accessible={true}
                  activeOpacity={1}
                  disabled={true}
                  loading={false}
                  onPress={[Function]}
                  onPressIn={[Function]}
                  onPressOut={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "backgroundColor": "#4459ff",
                      "borderRadius": 12,
                      "flex": 1,
                      "flexDirection": "row",
                      "height": 48,
                      "justifyContent": "center",
                      "opacity": 0.5,
                      "paddingHorizontal": 16,
                    }
                  }
                  testID="reveal-private-credential-next-button"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#ffffff",
                        "fontFamily": "CentraNo1-Medium",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                  >
                    Next
                  </Text>
                </TouchableOpacity>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View />
    </View>
  </RCTScrollView>
</View>
`;
